* Added arguments:
	- `whichAssay` to all functions to allow the user to select the assay on which the operations will be performed.
	- `stopOnErrors` to `RSEC`
	- `nColLegend` to `plotReducedDims`
	- `subsample` and `sequential` to `RSEC` to allow for opting out of those options (but default is `TRUE` unlike `clusterMany`)
* `plotDendrogram` now allows for plotting of `colData` (previously `sampleData`) like `plotHeatmap` or `plotClusters`
* Removed restriction in `plotClustersWorkflow` that only `clusterType="clusterMany"` allowed.
* Allow `getClusterManyParams` to search old `clusterMany` runs as well.
* Added `table` method to `plotHeatmap` (for plotting heatmap of results of `table` function)
* Added error catch if try to give argument `whichCluster` to `mergeCluster`.
* Added error catch if give param `whichClusters` to functions that only take `whichCluster` (singular) as an argument

Bugs:
* Add check for merge_nodeMerge table that `mergeClusterId` column can't be NA for entries where `isMerged=TRUE`
* Fix internal .makeIntegerClusters so that if given values `1:K` for input clustering will retain these same values (Issue #227)

Changes in version 2.1.3 ( Release date: 2018-05-24)
==============
Bugs:
* Fix bug in how `clusterMany` and `defaultNDims` dealt with filtering choices in `reduceMethod`. 
* Fixed bug in how `clusterMany` assigned label names 
* Fixed bug so that `clusterMany` labels are increased (iteration version added) if `clusterMany` is rerun. Also, user-defined labels for functions like `mergeClusters` are now updated with iteration value if they are duplicated.


Changes in version 2.1.2 ( Release date: 2018-05-17)
==============

Bugs:
* Fix so that estimates of the proportion non-null in `mergeClusters` are always positive.
* Fix so that calculation of filter with `ignoreUnassignedVar` doesn't delete existing base filter of same type.
* Fix `plotClustersWorkflow` where wrong cluster was grabbed to plot.