@@ -50,6 +50,7 @@ exportMethods(coClustering)
 exportMethods(combineMany)
 exportMethods(convertClusterLegend)
 exportMethods(dendroClusterIndex)
+exportMethods(eraseMergeInfo)
 exportMethods(filterData)
 exportMethods(filterNames)
 exportMethods(getBestFeatures)
