@@ -45,7 +45,7 @@
 #'   a dendrogram with less samples than \code{NCOL(x)}, which is not permitted
 #'   for the \code{@dendro_samples} slot.
 #' @details If any merge information is stored in the input object, it will be
-#'   erased by a call to mergeDendrogram.
+#'   erased by a call to makeDendrogram.
 #' @return If x is a matrix, a list with two dendrograms, one in which the
 #'   leaves are clusters and one in which the leaves are samples. If x is a
 #'   ClusterExperiment object, the dendrograms are saved in the appropriate
